<resources>
    <string name="app_name">Tower of Hanoi</string>

    <string name="integer_holder">%1$d</string>

    <!-- Success popup strings -->
    <string name="success_message">You solved the puzzle with %1$d disks!</string>
    <string name="success_optimal_moves">Optimal solution: %1$d moves</string>
    <string name="success_title_optimal">Perfect solution!</string>
    <string name="success_title">Success!</string>
    <string name="success_moves">Moves: %1$s</string>
    <string name="success_time">Time: %1$s</string>
    <string name="this_game"><b>This Game</b></string>
    <string name="best"><b>Best</b></string>

    <!-- Main menu strings -->
    <string name="main_menu">Main Menu</string>
    <string name="play_again">Play Again</string>
    <string name="new_game">New Game</string>
    <string name="load_game">Load Game</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- Strings related to settings -->
    <string name="num_disk_title">Number of Disks</string>
    <string name="num_disk_message">Set how many disks are in the game</string>
    <string name="set_background">Background</string>
    <string name="background_summary">Set the game background</string>
    <string name="peg_appearance">Peg Appearance</string>
    <string name="peg_description">Set texture of pegs</string>
    <string name="disk_colors">Disk Colors</string>
    <string name="disk_summary">Choose colors for disks</string>
    <string name="base_stone">Stone</string>
    <string name="base_texture">Base Texture</string>
    <string name="base_texture_description">Choose the texture for the base</string>

    <string name="background_success">Background set successfully</string>
    <string name="background_failure">Background not set</string>
    <string name="timer_title">Show Timer</string>
    <string name="show_moves_title">Show Moves</string>
    <string name="sound_effects_title">Sound Effects</string>
    <string name="help">Help</string>

    <!-- Strings related to high scores -->
    <string name="high_scores">High Scores</string>
    <string name="best_moves">Best Moves</string>
    <string name="best_time">Best Time</string>
    <string name="none">----</string>

    <!-- Game display strings -->
    <string name="timer_text">Time: %1$s</string>
    <string name="moves">Moves: %1$d</string>

    <!-- Strings related to disk colors -->
    <string name="basic_colors">Basic Colors</string>
    <string name="additional_colors">Additional Colors</string>

    <!-- Basic colors -->
    <string name="black">Black</string>
    <string name="gray">Gray</string>
    <string name="yellow">Yellow</string>
    <string name="blue">Blue</string>
    <string name="light_blue">Light Blue</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="purple">Purple</string>
    <string name="red">Red</string>

    <!-- Additional colors -->
    <string name="mint_green">Mint Green</string>
    <string name="royal_blue">Royal Blue</string>
    <string name="mustard_yellow">Mustard Yellow</string>
    <string name="heather_purple">Heather Purple</string>
    <string name="deep_orange">Deep Orange</string>
    <string name="blue_gray">Blue Gray</string>

    <!-- Disk numbers -->
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>

    <!-- Tutorial strings -->
    <string name="move_disks">Moving Disks</string>
    <string name="size_rule">Size Rule</string>
    <string name="finish_game">Finishing the Game</string>
    <string name="tutorial_end">That\'s It!</string>
    <string name="tutorial_title">How to Play</string>
    <string name="tutorial_description_1">Tap near a peg to pick up the top disk</string>
    <string name="tutorial_description_2">Hold and drag to move the disk to another peg</string>
    <string name="tutorial_description_3">Release to drop the disk on the new peg</string>
    <string name="tutorial_description_4">You may not place a larger disk on top of a smaller disk</string>
    <string name="tutorial_description_5">Move all disks to the right peg to complete the puzzle</string>

    <!-- Other -->
    <string name="base_description">Baseline color</string>
    <string name="about_tower">About Tower of Hanoi</string>


</resources>
