<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alex.towerofhanoi.HighScoreActivity">

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        grid:alignmentMode="alignBounds"
        grid:columnCount="3"
        grid:rowOrderPreserved="false"
        grid:useDefaultMargins="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/num_disk_title"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000000"
            android:text="@string/best_moves"
            android:textStyle="bold"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000000"
            android:text="@string/best_time"
            android:textStyle="bold"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/two"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:id="@+id/best_moves_2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:id="@+id/best_time_2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/three"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:id="@+id/best_moves_3"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:id="@+id/best_time_3"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/four"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:id="@+id/best_moves_4"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:id="@+id/best_time_4"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/five"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:id="@+id/best_moves_5"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:id="@+id/best_time_5"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/six"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:id="@+id/best_moves_6"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:id="@+id/best_time_6"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/seven"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:id="@+id/best_moves_7"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:id="@+id/best_time_7"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/eight"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:id="@+id/best_moves_8"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:id="@+id/best_time_8"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/nine"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:id="@+id/best_moves_9"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:id="@+id/best_time_9"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/ten"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:id="@+id/best_moves_10"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:id="@+id/best_time_10"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/eleven"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:id="@+id/best_moves_11"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:id="@+id/best_time_11"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/twelve"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:id="@+id/best_moves_12"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

        <TextView
            android:id="@+id/best_time_12"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000000"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"/>

    </android.support.v7.widget.GridLayout>

</ScrollView>
